# edgestepgraphsinC

./: .gitignore  CMakeLists.txt  README.md  alt.c  alt2.c  alt3.c  main.c
outputs/: output  output12.csv  output13.csv  output14.csv  output15.csv  output2  output3  output4  output5
